- create user-profile-service - configure multi-module project - added openapi.yml and controller and model - added feign client
